Bug 251255 - [GTK][WPE] WebsiteDataManger created by persistent network session should never return NULL for base cache and data directories
Summary: [GTK][WPE] WebsiteDataManger created by persistent network session should nev...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKitGTK (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Carlos Garcia Campos
URL:
Keywords: Gtk
Depends on:
Blocks:
 
Reported: 2023-01-27 01:38 PST by Carlos Garcia Campos
Modified: 2023-01-27 05:21 PST (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Carlos Garcia Campos 2023-01-27 01:38:05 PST
When NULL is passed to network session constructor the default directory is provided to website data manager to ensure the getters don't return NULL.
Comment 1 Carlos Garcia Campos 2023-01-27 01:40:31 PST
Pull request: https://github.com/WebKit/WebKit/pull/9216
Comment 2 EWS 2023-01-27 05:21:53 PST
Committed 259480@main (86dd3d71686a): <https://commits.webkit.org/259480@main>

Reviewed commits have been landed. Closing PR #9216 and removing active labels.