[GTK][WPE] WebsiteDataManger created by persistent network session should never return NULL for base cache and data directories https://bugs.webkit.org/show_bug.cgi?id=251255

Reviewed by Adrian Perez de Castro.

When NULL is passed to network session constructor the default directory
is provided to website data manager to ensure the getters don't return
NULL.

* Source/WebKit/UIProcess/API/glib/WebKitNetworkSession.cpp:
(webkitNetworkSessionSetProperty):
(webkitNetworkSessionConstructed):
* Source/WebKit/UIProcess/API/glib/WebKitWebsiteDataManager.cpp:
(webkitWebsiteDataManagerSetProperty):
(webkitWebsiteDataManagerConstructed):
(webkitWebsiteDataManagerGetDataStore):
(webkitWebsiteDataManagerCreate):
(webkit_website_data_manager_get_base_data_directory):
(webkit_website_data_manager_get_base_cache_directory):
(webkitWebsiteDataManagerGetFaviconDatabasePath):
* Source/WebKit/UIProcess/API/glib/WebKitWebsiteDataManagerPrivate.h:
* Source/WebKit/UIProcess/WebsiteData/WebsiteDataStore.h:
* Source/WebKit/UIProcess/glib/WebsiteDataStoreGLib.cpp:
(WebKit::WebsiteDataStore::defaultBaseCacheDirectory):
(WebKit::WebsiteDataStore::defaultBaseDataDirectory):
(WebKit::WebsiteDataStore::cacheDirectoryFileSystemRepresentation):
(WebKit::WebsiteDataStore::websiteDataDirectoryFileSystemRepresentation):
* Tools/TestWebKitAPI/Tests/WebKitGLib/TestWebsiteData.cpp:
(testWebsiteDataConfiguration):

Canonical link: https://commits.webkit.org/259480@main